docs: ajust swagger
